--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,9 +1,8 @@
 <div id="disqus_thread"></div>
 <script>
   var disqus_config = function () {
-    this.page.url = '{{ page.url | absolute_url }}';
+    this.page.url = 'https://onemore14.github.io/' + '{{ page.url | absolute_url }}';
     this.page.identifier = '{{ page.url | absolute_url }}';
-    console.log("!!!!! ", this.page.url)
   };
 
   (function() {
